--- a/gold-dashboard/package.json
+++ b/gold-dashboard/package.json
@@ -9,10 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "chart.js": "^4.5.0",
+    "apexcharts": "^5.3.3",
     "next": "15.4.6",
     "react": "19.1.0",
-    "react-chartjs-2": "^5.3.0",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "19.1.0",
     "recharts": "^3.1.2"
   },
