--- a/gold-dashboard/package.json
+++ b/gold-dashboard/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@huggingface/inference": "^4.7.1",
+    "@supabase/supabase-js": "^2.55.0",
     "apexcharts": "^5.3.3",
+    "emoji-strip": "^1.0.1",
     "next": "15.4.6",
+    "node-cron": "^4.2.1",
     "react": "19.1.0",
     "react-apexcharts": "^1.7.0",
     "react-dom": "19.1.0",
-    "recharts": "^3.1.2"
+    "recharts": "^3.1.2",
+    "sentiment": "^5.0.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
