--- a/gold-dashboard/package.json
+++ b/gold-dashboard/package.json
@@ -19,7 +19,8 @@
     "react-apexcharts": "^1.7.0",
     "react-dom": "19.1.0",
     "recharts": "^3.1.2",
-    "sentiment": "^5.0.2"
+    "sentiment": "^5.0.2",
+    "yahoo-finance2": "^2.13.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
