two vercel crons instead of the github workflows one

--- a/gold-dashboard/vercel.json
+++ b/gold-dashboard/vercel.json
@@ -3,6 +3,10 @@
     {
       "path": "/api/Update-Gold",
       "schedule": "0 0 * * *"
+    },
+    {
+      "path": "/api/Update-Sentiment",
+      "schedule": "0 * * * *"       
     }
   ]
 }
