--- a/gold-dashboard/vercel.json
+++ b/gold-dashboard/vercel.json
@@ -6,7 +6,7 @@
     },
     {
       "path": "/api/Update-Sentiment",
-      "schedule": "0 * * * *"       
+      "schedule": "0 0 * * *"       
     }
   ]
 }
